--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
-    "leaflet": "^1.9.4",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "firebase-admin": "^13.4.0",
+    "joi": "^18.0.1",
+    "method-override": "^3.0.0",
+    "mongoose": "^8.18.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.1",
+    "socket.io": "^4.8.1",
     "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.11"
   },
