adding signup, login and landing page

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "firebase-admin": "^13.4.0",
+    "framer-motion": "^12.23.12",
     "joi": "^18.0.1",
+    "lucide-react": "^0.542.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.18.0",
     "nodemon": "^3.1.10",
