--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,17 @@
 {
   "builds": [
-    { "src": "frontend/dist/**", "use": "@vercel/static" },
-    { "src": "backend/api/*.js", "use": "@vercel/node" }
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist" }
+    },
+    {
+      "src": "backend/api/app.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "backend/api/app.js" },
-    { "src": "/(.*)", "dest": "frontend/dist/$1" }
+    { "src": "/(.*)", "dest": "/dist/$1" }
   ]
 }
