--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "mongoose": "^7.0.0"
+    "mongoose": "^7.0.0",
+    "dotenv": "^17.2.1"
   }
 }
