--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "api/app.js",
+  "type":"module",
   "scripts": {
     "start": "node api/app.js"
   },
