--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
-    "firebase-admin": "^13.4.0",
+    "firebase": "^12.2.1",
+    "firebase-admin": "^13.5.0",
     "framer-motion": "^12.23.12",
     "joi": "^18.0.1",
     "lucide-react": "^0.542.0",
@@ -27,7 +28,6 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.1",
-    "socket.io": "^4.8.1",
     "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.11"
   },
