--- a/backend/package.json
+++ b/backend/package.json
@@ -2,14 +2,17 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "api/app.js",
-  "type":"module",
+  "type": "commonjs",
   "scripts": {
     "start": "node api/app.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^4.18.2",
+    "express-session": "^1.18.2",
     "mongoose": "^7.0.0",
-    "dotenv": "^17.2.1"
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
