replacing manual OAuth with firebase OAuth2 authentication

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@
 .env
 .env.*.local
 
+# Firebase service account (do not commit credentials)
+serviceAccountKey.json
+backend/serviceAccountKey.json
+
 # vite cache
 /.vite
 
