--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,10 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "express-session": "^1.18.2",
+    "firebase-admin": "^13.6.0",
     "mongoose": "^7.0.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
